PIMP: cambios al editar mujeres para que incluya categorias pero no las guarda bien, esto es para hacer pruebas

--- a/AGataDoDia/Pimp/pimp/public/stylesheets/main.css
+++ b/AGataDoDia/Pimp/pimp/public/stylesheets/main.css
@@ -1,4 +1,4 @@
-.phone_template, .twipsies.well.localization_template, .twipsies.well.country_template, .twipsies.well.media_template {
+.phone_template, .twipsies.well.localization_template, .twipsies.well.country_template, .twipsies.well.media_template, .twipsies.well.category_template {
     display:none !important;
 }
 
