--- a/AGataDoDia/Pimp/pimp/app/views/main.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/main.scala.html
@@ -233,7 +233,7 @@
                                     <li><a href="@controllers.routes.WomenView.list()">Listar</a></li>
                                     <li class="divider"></li>
                                     <li class="dropdown-header">Operaciones</li>
-                                    <li><a href="javascript:void(0)">Crear</a></li>
+                                    <li><a href="@controllers.routes.WomenView.blank">Crear</a></li>
                                 </ul>
                             </li>
 
