--- a/AGataDoDia/Pimp/pimp/app/views/women/edit.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/women/edit.scala.html
@@ -5,6 +5,19 @@
 
 @title = {}
 
+@categoryGroup(field: Field, className: String = "category") = {
+    <div class="twipsies well @className">
+        <a class="removeCategory btn btn-primary danger pull-right">Remove this Category: @Html(""+field("category.name").value.getOrElse("NONE"))</a>
+        @select(
+            field("category"),
+            models.content.women.Category.toSeq,
+            '_label -> "Categoria",
+            'class -> "form-control"
+        )
+        <!--Faltan unas cosas de POSTS -->
+    </div>
+}
+
 @main(title = "Editar mujer", nav = "create") {
 
     @if(womenViewForm.hasErrors) {
@@ -17,7 +30,7 @@
     
     <h1>Edit Woman</h1>
     
-     @helper.form(controllers.routes.WomenView.update(id), 'enctype -> "multipart/form-data") {
+     @helper.form(controllers.routes.WomenView.update(id), 'enctype -> "multipart/form-data", 'id -> "form") {
         
         <fieldset>
         	<legend>Informacion de la mujer</legend>
@@ -53,6 +66,29 @@
                 </div>
             }
 
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Categories</h2>
+                </div>
+            </div>
+            <div id="categories">
+
+                @repeat(womenViewForm("categories")) { category =>
+
+                @categoryGroup(category)
+
+                }
+                @categoryGroup(
+                    womenViewForm("categories[x]"),
+                    className = "category_template"
+                )
+
+                <div class="manage">
+                    <a class="addCategory btn btn-primary success">Add another category</a>
+                </div>
+
+            </div>
+
         </fieldset>
 
         <div class="actions">        	        	 
@@ -66,5 +102,46 @@
 		<input type="submit" value="Eliminar esta mujer" onclick="return confirm('¿Por favor confirmar que desea eliminar la información de esta mujer?');" class="btn btn-danger">
 		
     }
+
+    <script type="text/javascript" charset="utf-8">
+
+        $(document).on('click','.removeCategory', function(e) {
+            console.log("ESTO NO LO VEO")
+            $(this).parents('.category').remove()
+            renumberCategories()
+        })
+
+        $(document).on('click','.addCategory', function(e) {
+            var template = $('.category_template')
+            template.before('<div class="twipsies well category">' + template.html() + '</div>')
+            renumberCategories()
+        })
+
+        var renumberCategories = function() {
+        console.log("PASO?????");
+            $('.category').each(function(i) {
+                $('select', this).each(function() {
+                    console.log("PASO "+$(this).attr('name'));
+                    $(this).attr('name', $(this).attr('name').replace(/categories\[.+?\]/g, 'categories[' + i + ']'))
+                    $(this).attr('id', $(this).attr('id').replace(/categories\_x/g, 'categories_' + i))
+
+                })
+                /*$('label', this).each(function() {
+                    console.log("PASO1 "+$(this).attr('for'));
+                    $(this).attr('for', $(this).attr('for').replace(/categories\_x/g, 'categories_' + i))
+                })
+
+                $('div', this).each(function() {
+                    console.log("PASO2 "+$(this).attr('id'));
+                    //$(this).attr('id', $(this).attr('id').replace(/categories\_x/g, 'categories_' + i))
+                })*/
+            })
+        }
+
+        $('#form').submit(function() {
+            $('.category_template').remove()
+        })
+
+    </script>
        
 }
