--- a/AGataDoDia/Pimp/pimp/app/views/women/form.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/women/form.scala.html
@@ -5,6 +5,25 @@
 
 @title = {}
 
+@categoriesGroup(field: Field, className: String = "categories") = {
+    <div class="twipsies well @className">
+        <a class="removeCategory btn btn-primary danger pull-right">Remove this Category @Html(""+field("category").value.getOrElse("NONE"))</a>
+        @if(field("category.name").value.getOrElse("NONE") == "NONE"){
+        <!--input type="hidden" name=@Html(""+field("idCategory")) value=@Html(""+field("idCategory").value)-->
+
+        } else {
+
+        }
+        @select(
+            field("category"),
+            models.content.women.Category.toSeq,
+            '_label -> "Categoria",
+            'class -> "form-control"
+        )
+        <!--Faltan unas cosas de POSTS -->
+    </div>
+}
+
 @main(title = "Crear Mujer", nav = "create") {
     
      @if(flash.containsKey("success")) {
@@ -22,26 +41,67 @@
     }
 
 
-    @helper.form(action = controllers.routes.WomenView.submit, 'enctype -> "multipart/form-data") {
+    @helper.form(action = controllers.routes.WomenView.submit, 'enctype -> "multipart/form-data", 'id -> "form") {
         
         <fieldset>
-            <legend>Información de la mujer</legend>
-            
-            @inputText(
-                womenViewForm("name"),
-                '_label -> "Nombre", 
-                '_help -> "Ingrese un nombre válido.",
-                'class -> "form-control",
-                '_error -> womenViewForm.globalError
-            )
-               
-			@inputText(
-                womenViewForm("default_photo"),
-                '_label -> "Default photo",
-                '_help -> "Ingrese una url válida.",
-                'class -> "form-control",
-                '_error -> womenViewForm.globalError
-            )
+            <legend>Informacion de la mujer</legend>
+
+            @inputText(womenViewForm("name"),
+            '_label -> "Nombre",
+            '_help -> "Ingrese un nombre válido.",
+            'class -> "form-control",
+            '_error -> womenViewForm.globalError)
+
+
+
+            @if(womenViewForm("defaultPhoto").value == null || womenViewForm("defaultPhoto").value.equals("")){
+                <div class="form-group">
+                    <label for="inputFile" class="col-lg-2 control-label">File</label>
+                    <div class="col-lg-10">
+                        @input(womenViewForm("defaultPhoto"), '_label -> "Image") { (id, name, value, _) =>
+                        <input type="text" name="@name" value="@value" readonly="" class="form-control floating-label" placeholder="Browse...">
+                        <input type="file" id="inputFile" multiple="">
+                        }
+                    </div>
+                </div>
+            } else {
+                <div class="col-lg-4">
+                    @input(womenViewForm("defaultPhoto"), '_label -> "Foto default") { (id, name, value, _) =>
+                    <img class="img-rounded" src="@value" alt="icon" name="@name" style="width: 100px; height: 100px;" >
+                    }
+                </div>
+
+                <div class="col-lg-8">
+                    @inputText(womenViewForm("defaultPhoto"),
+                    '_label -> "Foto URL",
+                    '_help -> "Ingrese una url válida.",
+                    'class -> "form-control",
+                    '_error -> womenViewForm.globalError)
+                </div>
+            }
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Categories</h2>
+                </div>
+            </div>
+            <div id="categories">
+
+                @repeat(womenViewForm("categories")) { category =>
+
+                @categoriesGroup(category)
+
+                }
+                @categoriesGroup(
+                womenViewForm("categories[x]"),
+                className = "categories_template"
+                )
+
+                <div class="manage">
+                    <a class="addCategory btn btn-primary success">Add another category</a>
+                </div>
+
+            </div>
             
         </fieldset>
 
@@ -51,5 +111,46 @@
         </div>
         
     }
+
+    <script type="text/javascript" charset="utf-8">
+
+        $(document).on('click','.removeCategory', function(e) {
+            console.log("ESTO NO LO VEO")
+            $(this).parents('.categories').remove()
+            renumberCategories()
+        })
+
+        $(document).on('click','.addCategory', function(e) {
+            var template = $('.categories_template')
+            template.before('<div class="twipsies well categories">' + template.html() + '</div>')
+            renumberCategories()
+        })
+
+        var renumberCategories = function() {
+        console.log("PASO?????");
+            $('.categories').each(function(i) {
+                $('select', this).each(function() {
+                    console.log("PASO "+$(this).attr('name'));
+                    $(this).attr('name', $(this).attr('name').replace(/categories\[.+?\]/g, 'categories[' + i + ']'))
+                    $(this).attr('id', $(this).attr('id').replace(/categories\_x/g, 'categories_' + i))
+
+                })
+                /*$('label', this).each(function() {
+                    console.log("PASO1 "+$(this).attr('for'));
+                    $(this).attr('for', $(this).attr('for').replace(/categories\_x/g, 'categories_' + i))
+                })
+
+                $('div', this).each(function() {
+                    console.log("PASO2 "+$(this).attr('id'));
+                    //$(this).attr('id', $(this).attr('id').replace(/categories\_x/g, 'categories_' + i))
+                })*/
+            })
+        }
+
+        $('#form').submit(function() {
+            $('.categories_template').remove()
+        })
+
+    </script>
  
 }
