Se agrega el id de la categoraa para evaluar la opcion seleccionada

--- a/AGataDoDia/Pimp/pimp/app/views/women/edit.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/women/edit.scala.html
@@ -9,7 +9,7 @@
     <div class="twipsies well @className">
         <a class="removeCategory btn btn-primary danger pull-right">Remove this Category: @Html(""+field("category.name").value.getOrElse("NONE"))</a>
         @select(
-            field("category"),
+            field("category.idCategory"),
             models.content.women.Category.toSeq,
             '_label -> "Categoria",
             'class -> "form-control"
